Fix wrong position on error message

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -243,8 +243,10 @@ $font-secondary: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helveti
       color: red;
       margin: 0 48px;
 
-      &.player-2 {
-        float: right;
+      @media (min-width: 873px) {
+        &.player-2 {
+          float: right;
+        }
       }
     }
 
